# slack

./: .gitignore  README.md  SKILL.md  config.yaml  pyproject.toml  slack.md
src/: cli.py  pull.py  server.py  storage.py  watch.py
src/commands/: __init__.py  client.py  inbox.py  inbox_list.py  inbox_read.py  inbox_summary.py  inbox_view.py  message.py  resolve.py  server.py  write.py
src/utils/: __init__.py  api.py  const.py  formatting.py  resolution.py  server.py  slack.py  tracking.py
